Finish hw10